Agregado texto descriptivo desafio numero 3

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   <img src="./assets/img/desafio-3.JPG" class="card-img-top" alt="desafio-3">
                   <div class="card-body">
                     <h5 class="card-title">Desafio 3</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Desafio en el cual aprendimos a alinear con flex y nuevos conceptos como flexbox</p>
                   </div>
                 </div>
               </div>
