Agregado titulo de tarjeta para curriculum y texto descriptivo agregado

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
               <div class="card">
                 <img src="./assets/img/desafio-1.JPG" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="card-title">Curriculum Vitae en HTML</h5>
+                  <p class="card-text">Primer desafio creando nuestro CV en HTML.</p>
                 </div>
               </div>
             </div>
