Edit link experiencia- aun incompleto

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </nav>
 
-
+      "<a rel="noopener" target="_blank" href="la-experiencia">aaa</a>
 <section class="hero mt-0-pt-0">
   
 
@@ -75,8 +75,8 @@
    </section>
 
    
-  <section div="Experiencia">
-
+  <section div="Experiencia"</a>
+    
     <div class=" lg-md-sm row row-cols-1 row-cols-md-3 g-4 ms-1 me-2 mt-1">
 <!--CARD 1  -->
 
